ignition/030-service.yaml.yml
kind: Service
apiVersion: v1
metadata:
  name: ignition-service
  namespace: industrial-ignition-demo
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
  internalTrafficPolicy: Cluster
  clusterIPs:
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: ignition
